Networking-policies/allow-connection-inside-prod.yaml
#This Policy Will Allow Traffic Between PODs in prod NS with Label env=prod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-within-prod-namespace
  namespace: production
spec:
  podSelector: 
   matchLabels:
    env: prod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          env: prod
  egress:
  - to:
    - podSelector:
        matchLabels:
          env: prod
