Networking-policies/allow-connection-prod-to-dev.yaml
#Allow Ingress Traffic From dev To prod applied at prod Namespace
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-dev-to-prod
  namespace: production
spec:
  podSelector:
    matchLabels:
      env: prod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: dev
        - podSelector:
            matchLabels:
              env: dev


#Allow Egress Traffic From dev To prod applied at dev Namespace
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-dev-to-prod
  namespace: development
spec:
  podSelector:
    matchLabels:
      env: dev
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              env: prod
        - podSelector:
            matchLabels:
              env: prod
