Networking-policies/deny-traffice-inside-namespace-pods.yaml
#Incoming traffic is blocked for trouble1
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: trouble1
  policyTypes:
  - Ingress

---
#Outgoing traffic is blocked for trouble1
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: trouble1
  policyTypes:
  - Egress

---
#Incoming and Outgoing traffic blocked
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress-egress
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: trouble1
  policyTypes:
  - Ingress
  - Egress
